<!--    Copyright 2022,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<resources>
    <string name="app_name">Goal Chaser</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="instructions_drawer_menu_item">Instructions</string>
    <string name="statistics_drawer_menu_item">Statistics</string>
    <string name="instructions_text">This is how it can be used:
Once the app starts, a screen with space for image and goals\' list will show up.
If there\'s internet you can view a beautiful motivational image.
Once saved the image is available in offline mode too.
Once a new goal is created via the + button,you can tap on it and open additional features.
On the main screen to the right,there\'s a menu,which can show you either active or completed goals list for your reference.
When viewing completed goals,tap on a goal for additional features.
You will also notice that once you have marked a goal completed,the date shows Completed. This is completion goal date so not the goal due date.
The notifications feature is also there - once scheduled,the notification will be sent out on the proper date regardless of whether the app is running.Once the notification pops up,tap it to view additional goal details and open the app if desired.
Thank you for choosing my app and enjoy:)</string>
    <string name="instructions_fragment_label">Instructions</string>
    <string name="active_goals_fragment_label">Goals</string>
    <string name="statistcs_fragment_label">Statistics</string>
    <string name="statistics_header">Goals by completion status</string>
    <string name="title_label_save_edit_fragment">Goal title</string>
    <string name="goal_description_label">Goal description (optional)</string>
    <string name="goal_due_date_label">Goal due date</string>
    <string name="create_goal_fragment_label">Create goal</string>
    <string name="edit_goal_fragment_label">Goal details</string>
    <string name="notification_settings_menu_item_text">Notification settings</string>
    <string name="enable_notifications_label">Enable</string>
    <string name="goal_notifications_label">Enable goal notifications</string>
    <string name="send_notification_label">Notify me</string>
    <string name="before_goal_due_date_label">before goal due date.</string>
    <string name="number">1</string>
    <string name="active_goals_drawer_menu_item">Goals</string>
    <string name="photographer_credentials">Photo by %1$s on %2$s</string>
    <string name="user_entered_date">%1$d/%2$d/%3$d</string>
    <string name="unsplash_website_title">Unsplash</string>
    <string name="no_data_error">Error getting details</string>
    <string name="no_title_entered_notification">Please enter title</string>
    <string name="ok">OK</string>
    <string name="days_hint">0</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="goal_created_toast">%1$s created!</string>
    <string name="details_popup_menu_text">Details</string>
    <string name="mark_completed_popup_menu_text">Mark completed</string>
    <string name="delete_popup_menu_text">Delete</string>
    <string name="deleted_goal_toast">%1$s deleted!</string>
    <string name="alert_dialog_title">Delete %1$s?</string>
    <string name="alert_dialog_message">This can\'t be undone.</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="goal_adjusted_snackbar_message">Past due date of %1$d-%2$s-%3$d
        auto - adjusted ,you can still set any other future date .</string>
    <string name="goal_updated_toast">%1$s updated !</string>
    <string name="nothing_to_update_toast">Nothing to update!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed_goal_label">completed!</string>
    <string name="return_to_goals_overview_button_label">return to goals overview</string>
    <string name="alert_dialog_mark_completed">Mark %1$s completed?</string>
    <string name="alert_dialog_confirm_completed">mark completed</string>
    <string name="show_active_goals_menu_item">Active goals</string>
    <string name="show_completed_goals_menu_item">Completed goals</string>
    <string name="delete_active_goals_menu_item">Delete active goals</string>
    <string name="delete_completed_goals_menu_item">Delete completed goals</string>
    <string name="active_goals_toast">Viewing active goals</string>
    <string name="completed_goals_toast">Viewing completed goals</string>
    <string name="completed_goal_title_label">Completed goal title</string>
    <string name="completed_goal_details_completion_date_label">Goal completion date</string>
    <string name="completed_goal_label_list_item">Completed</string>
    <string name="due_goal_label_list_item">Due until</string>
    <string name="active_goals_deleted_toast">Active goals deleted!</string>
    <string name="alert_dialog_delete_all_active_goals">Delete all active goals?</string>
    <string name="alert_dialog_delete_all_completed_goals">Delete all completed goals?</string>
    <string name="alert_dialog_delete_all_goals">Delete all goals?</string>
    <string name="completed_goals_deleted_toast">Completed goals deleted!</string>
    <string name="all_goals_deleted_toast">All goals deleted!</string>
    <string name="nothing_to_delete_toast">Nothing to delete!</string>
    <string name="active_goal_title_label">Goal title</string>
    <string name="open_app_button_label">View goal list</string>
    <string name="active_goal_due_date_notification">Goal due until %1$s</string>
    <string name="invalid_notification_trigger_period">Invalid notification period entered</string>
    <string-array name="days_months">
        <item>Day(s)</item>
        <item>Month(s)</item>
    </string-array>
</resources>