<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright 2022,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_all_menu_root">

    <item
        android:id="@+id/show_active_menu_item"
        android:title="@string/show_active_goals_menu_item" />
    <item
        android:id="@+id/show_completed_menu_item"
        android:title="@string/show_completed_goals_menu_item" />
    <item
        android:id="@+id/delete_all_menu_item"
        android:title="@string/menu_delete_all" />
</menu>