<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright 2022,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/goalsListFragment">
    <fragment
        android:id="@+id/goalsListFragment"
        android:name="com.example.android.goalchaser.ui.activecompletedgoals.GoalsListFragment"
        android:label="@string/active_goals_fragment_label"
        tools:layout="@layout/fragment_goals_list" >
        <action
            android:id="@+id/action_goalsFragment_to_createEditGoalFragment"
            app:destination="@id/createEditGoalFragment" />
        <action
            android:id="@+id/action_goalsFragment_to_goalCompletedFragment"
            app:destination="@id/goalCompletedFragment" />
        <action
            android:id="@+id/action_goalsListFragment_to_completedGoalDetailsFragment"
            app:destination="@id/completedGoalDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.android.goalchaser.ui.instructions.InstructionsFragment"
        android:label="@string/instructions_fragment_label"
        tools:layout="@layout/fragment_instructions" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.android.goalchaser.ui.statistics.StatisticsFragment"
        android:label="@string/statistcs_fragment_label"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/createEditGoalFragment"
        android:name="com.example.android.goalchaser.ui.createeditgoal.CreateEditGoalFragment"
        tools:layout="@layout/fragment_create_edit_goal">
        <action
            android:id="@+id/action_createEditGoalFragment_to_goalsFragment"
            app:destination="@id/goalsListFragment" />
        <argument
            android:name="passedGoalId"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="passedLabel"
            android:defaultValue='""'
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/goalCompletedFragment"
        android:name="com.example.android.goalchaser.ui.activecompletedgoals.GoalCompletedFragment"
        tools:layout="@layout/fragment_goal_completed" />
    <fragment
        android:id="@+id/completedGoalDetailsFragment"
        android:name="com.example.android.goalchaser.ui.activecompletedgoals.CompletedGoalDetailsFragment"
        android:label="CompletedGoalDetailsFragment"
        tools:layout="@layout/fragment_completed_goal_details"/>
    <activity
        android:id="@+id/activeGoalDetailsActivity"
        android:name="com.example.android.goalchaser.ActiveGoalDetailsActivity"
        android:label="activity_active_goal_details"
        tools:layout="@layout/activity_active_goal_details" />
</navigation>